# forecast_deaths_france

./: main.py  pyproject.toml
notebooks/: EDA.ipynb
