[project]
name = "forecast-deaths-france"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pmdarima>=2.0.4",
    "s3fs>=2025.7.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
